--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
-apache-airflow==2.10.4
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+argcomplete==3.5.3
+attrs==25.1.0
 beautifulsoup4==4.13.3
-playwright==1.49.1
-pytest==8.3.4
-Requests==2.32.3
-selenium==4.28.1
-urllib3==2.3.0
-webdriver_manager==4.0.2
-pandas==2.2.3
-numpy==2.2.2
+bs4==0.0.2
+click==8.1.8
+Cython==3.0.12
+frozenlist==1.5.0
+greenlet==3.1.1
+idna==3.10
+multidict==6.1.0
+packaging==24.2
+pipx==1.7.1
+platformdirs==4.3.6
+playwright==1.50.0
+propcache==0.2.1
+pyee==12.1.1
+PyYAML==6.0.2
+setuptools==75.8.0
+soupsieve==2.6
+typing_extensions==4.12.2
+userpath==1.9.2
+wheel==0.45.1
+yarl==1.18.3
