--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.terminal.activateEnvInCurrentTerminal": true,
-    "python.terminal.focusAfterLaunch": true
+    "python.terminal.focusAfterLaunch": true,
+    "workbench.editor.defaultBinaryEditor": "default"
 }
